[gd_scene load_steps=14 format=3 uid="uid://wjpdlkyaksia"]

[ext_resource type="Script" path="res://Scripts/main_menu_ui.gd" id="1_2f11h"]
[ext_resource type="FontFile" uid="uid://dji5p2gcapptw" path="res://Assets/UI/NewyearCoffee-4nd2D.ttf" id="1_gux6j"]
[ext_resource type="Texture2D" uid="uid://c1l82m0jglc5k" path="res://Assets/UI/play.png" id="2_kt10b"]
[ext_resource type="StyleBox" uid="uid://ry4swhay83jf" path="res://Assets/UI/menu_hover_green.tres" id="3_tsjpw"]
[ext_resource type="StyleBox" uid="uid://cym167tr1k6t0" path="res://Assets/UI/menu_green.tres" id="4_uygc4"]
[ext_resource type="Texture2D" uid="uid://b61th4ppfg8ac" path="res://Assets/UI/info.png" id="5_kq10f"]
[ext_resource type="StyleBox" uid="uid://dqutvjhnd0l0t" path="res://Assets/UI/menu_hover_blue.tres" id="6_o2t4c"]
[ext_resource type="StyleBox" uid="uid://b1007c7d3lso6" path="res://Assets/UI/menu_blue.tres" id="7_ey7t4"]
[ext_resource type="Texture2D" uid="uid://bycfvg2npacjh" path="res://Assets/UI/settings-knobs.png" id="8_3vjs5"]
[ext_resource type="Texture2D" uid="uid://dg70skn7suscm" path="res://Assets/UI/cancel.png" id="9_fstcc"]
[ext_resource type="StyleBox" uid="uid://bunu7gyd0flm5" path="res://Assets/UI/menu_hover_red.tres" id="10_qmdt0"]
[ext_resource type="Texture2D" uid="uid://o3embdjwnr1o" path="res://Assets/UI/load.png" id="10_uvvfw"]
[ext_resource type="StyleBox" uid="uid://ovt2sr7ttmqp" path="res://Assets/UI/menu_red.tres" id="11_illxf"]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2f11h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 37.0
offset_right = 541.0
offset_bottom = -37.0
grow_vertical = 2
theme_override_constants/separation = 55

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_gux6j")
theme_override_font_sizes/font_size = 175
theme_override_icons/icon = ExtResource("2_kt10b")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_tsjpw")
theme_override_styles/hover_pressed = ExtResource("3_tsjpw")
theme_override_styles/hover = ExtResource("3_tsjpw")
theme_override_styles/pressed = ExtResource("3_tsjpw")
theme_override_styles/normal = ExtResource("4_uygc4")
text = "PLAY!"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_gux6j")
theme_override_font_sizes/font_size = 100
theme_override_icons/icon = ExtResource("5_kq10f")
theme_override_styles/hover_pressed_mirrored = ExtResource("6_o2t4c")
theme_override_styles/hover_pressed = ExtResource("6_o2t4c")
theme_override_styles/hover = ExtResource("6_o2t4c")
theme_override_styles/pressed = ExtResource("6_o2t4c")
theme_override_styles/normal = ExtResource("7_ey7t4")
text = "Tutorial"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_gux6j")
theme_override_font_sizes/font_size = 100
theme_override_icons/icon = ExtResource("8_3vjs5")
theme_override_styles/hover_pressed_mirrored = ExtResource("6_o2t4c")
theme_override_styles/hover_pressed = ExtResource("6_o2t4c")
theme_override_styles/hover = ExtResource("6_o2t4c")
theme_override_styles/pressed = ExtResource("6_o2t4c")
theme_override_styles/normal = ExtResource("7_ey7t4")
text = "Options"

[node name="Load" type="Button" parent="VBoxContainer/Options"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -49.0
offset_right = 278.0
offset_bottom = 51.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_gux6j")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("10_uvvfw")
theme_override_styles/hover_pressed_mirrored = ExtResource("6_o2t4c")
theme_override_styles/hover_pressed = ExtResource("6_o2t4c")
theme_override_styles/hover = ExtResource("6_o2t4c")
theme_override_styles/pressed = ExtResource("6_o2t4c")
theme_override_styles/normal = ExtResource("7_ey7t4")
text = "load"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_gux6j")
theme_override_font_sizes/font_size = 100
theme_override_icons/icon = ExtResource("9_fstcc")
theme_override_styles/hover_pressed_mirrored = ExtResource("10_qmdt0")
theme_override_styles/hover_pressed = ExtResource("10_qmdt0")
theme_override_styles/hover = ExtResource("10_qmdt0")
theme_override_styles/pressed = ExtResource("10_qmdt0")
theme_override_styles/normal = ExtResource("11_illxf")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Options/Load" to="." method="load_settings"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
